--- a/o-aplikaci/index.html
+++ b/o-aplikaci/index.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <script type="module" src="script.js"></script>
-    <title>Webová aplikace</title>
+    <title>O projektu</title>
   </head>
 <body>
   <div class="container">
     <h1>Webová aplikace</h1>
+    <header>
+      <nav>
+        <a href="index.html">O projektu</a>
+        <a href="lenka.html">Lenka</a>
+        <a href="evelina.html">Evelína</a>
+      </nav>
+    </header>
+    <main>
+        <h1>Víkendový itinerář v Českých Budějovicích</h1>
+      </div>
+      <div>
+        <h3>O projektu:</h3>
+        <p>
+           Jednoduchý a přehledný web s tipy, jaká místa a podniky navštívit v Českých Budějovicích za jeden víkend. Bude to takový víkendový itinerář. Zaměříme se na oblast gastronomie, kultury, ubytování a přírodu. Každé místo bude zobrazeno na mapě a uživatel bude mít na výběr ze dvou míst, kam může vyrazit.
+        </p>
+      </div>
+    </main>
   </div>
 </body>
 </html>
