--- a/o-aplikaci/index.html
+++ b/o-aplikaci/index.html
@@ -12,7 +12,7 @@
   </head>
 <body>
   <div class="container">
-    <h1>Webová aplikace</h1>
+    <h1>Webová stránka</h1>
     <header>
       <nav>
         <a href="index.html">O projektu</a>
