--- a/evelina.html
+++ b/evelina.html
@@ -17,7 +17,7 @@
       <div class="osoba">
         <img class="fotka" src="Evelina.jpg" alt="Evelína" />
         <div class="osoba__popis">
-          <h1>Lenka</h1>
+          <h1>Evelína</h1>
           <h3>
             GitHub:
             <a href="https://github.com/evca94"
