--- a/o-aplikaci/index.html
+++ b/o-aplikaci/index.html
@@ -21,12 +21,12 @@
       </nav>
     </header>
     <main>
-        <h1>Víkendový itinerář v Českých Budějovicích</h1>
+        <h1>Local Lens</h1>
       </div>
       <div>
         <h3>O projektu:</h3>
         <p>
-           Jednoduchý a přehledný web s tipy, jaká místa a podniky navštívit v Českých Budějovicích za jeden víkend. Bude to takový víkendový itinerář. Zaměříme se na oblast gastronomie, kultury, ubytování a přírodu. Každé místo bude zobrazeno na mapě a uživatel bude mít na výběr ze dvou míst, kam může vyrazit.
+           Jednoduchý a přehledný web s tipy, jaká místa a podniky navštívit za jeden víkend. Projekt chceme rozšířit na krajská města. Pro tentokrát Vás provedeme Českými Budějovicemi. Bude to takový víkendový itinerář. Zaměříme se na oblast gastronomie, kultury, ubytování a přírodu. Každé místo bude zobrazeno na mapě a uživatel bude mít na výběr ze dvou až tří míst míst, kam může vyrazit.
         </p>
       </div>
     </main>
